find package antlr-runtime in main cmakelists

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -191,6 +191,8 @@ endif()
 #Boost header libraries
 find_package(Boost REQUIRED)
 
+find_package(antlr4-runtime REQUIRED)
+
 #Sirius solver
 if(POLICY CMP0074)
 	cmake_policy(SET CMP0074 NEW)
